# PBA_Labs

./: .clang-format  .gitignore  CMakeLists.txt  README.md  version.h.in
1/: constants.h  main.cpp  myfuncs.cpp  myfuncs.h
2/: main.cpp  myfuncs.cpp  myfuncs.h
3/: main.cpp  myfuncs.cpp  myfuncs.h
4/: MExc.cpp  MIO.cpp  MIO.h  MyString.h  dialog.cpp  dialog.h  main.cpp
5/: MExc.h  MIO.cpp  MIO.h  dialog.cpp  dialog.h  main.cpp
6/: MExc.cpp  MIO.cpp  MIO.h  MLL.cpp  MLL.h  dialog.cpp  dialog.h
cmake/: git-hash.cmake
include/LAB1/: constants.h  myfuncs.h
include/LAB2/: constants.h  myfuncs.h
include/LAB3/: Matrix.h  constants.h  myfuncs.h
include/LAB4/: MyString.h  myfuncs.h
include/LAB5/: myfuncs.h
include/LAB6/: MLL.h  myfuncs.h
include/MDialogs/: dialog.h
include/MIO/: MExc.h  MIO.h
labs/: CMakeLists.txt
labs/LAB1/: CMakeLists.txt  main.cpp  myfuncs.cpp
labs/LAB2/: CMakeLists.txt  main.cpp  myfuncs.cpp
labs/LAB3/: CMakeLists.txt  Matrix.cpp  main.cpp  myfuncs.cpp
labs/LAB4/: CMakeLists.txt  MyString.cpp  myfuncs.cpp
labs/LAB5/: CMakeLists.txt  main.cpp  myfuncs.cpp
labs/LAB6/: CMakeLists.txt  MLL.cpp  main.cpp  myfuncs.cpp
lib/: CMakeLists.txt
lib/MDialogs/: CMakeLists.txt  dialog.cpp
lib/MIO/: CMakeLists.txt  MExc.cpp  MIO.cpp
